--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 
 services:
   mysql:
-    image: mysql:8.0.44
+    image: mysql
     container_name: chat_mysql
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword123
