--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,22 @@ jobs:
   test-and-build:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: rootpassword123
+          MYSQL_USER: chatuser
+          MYSQL_PASSWORD: chatpassword123
+          MYSQL_DATABASE: chat_db
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+        ports:
+          - 3306:3306
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,6 +34,27 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+
+      # Create .env for CI/CD
+      - name: Create .env file
+        run: |
+          cat > .env << EOF
+          MYSQL_HOST=127.0.0.1
+          MYSQL_USER=chatuser
+          MYSQL_PASSWORD=chatpassword123
+          MYSQL_DATABASE=chat_db
+          MYSQL_PORT=3306
+          SERVER_PORT=8000
+          NODE_ENV=test
+          EOF
+
+      # Wait for MySQL to be ready
+      - name: Wait for MySQL
+        run: |
+          until mysqladmin ping -h"127.0.0.1" -u"chatuser" -p"chatpassword123" 2>/dev/null; do
+            echo 'waiting for mysql...'
+            sleep 1
+          done
 
       # Backend setup
       - name: Install backend dependencies
